<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scholar</string>
    <string name="learn_words">Учить</string>
    <string name="check_words">Проверять</string>
    <string name="add_words">Добавить слова</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_act_new_dictionary">Создание нового словаря</string>
    <string name="new_dictionary_comment">Создание нового словаря</string>
    <string name="enter_dict_name_prompt">Название словаря</string>
    <string name="w_language">Язык</string>
    <string name="txt_no_dicts_at_all">Нет ни одного словаря</string>
    <string name="txt_press_to_create_dictionary">Нажмите здесь, чтобы создать словарь...</string>
    <string name="dict_name_already_exists">Словарь с таким названием уже существует</string>
    <string name="title_activity_act_dictionary_list">Список словарей</string>
    <string name="incorrect_name">Недопустимое название</string>
    <string name="l_en">английский</string>
    <string name="l_de">немецкий</string>
    <string name="l_fr">французский</string>
    <string name="l_sp">испанский</string>
    <string name="action_dict_list">Словари</string>
    <string name="action_delete">Удалить</string>
    <string name="txt_new_dictionary">Создать</string>
    <string name="delete_dictionary_question">Вы действительно хотите удалить словарь %s?</string>
    <string name="current_dict_info" formatted="false">%s (%s)</string>
    <string name="txt_have_to_choose_dict">Не выбран словарь</string>
    <string name="txt_words_total">Всего слов</string>

    <string name="txt_words_for_learn">Слов для изучения</string>
    <string name="txt_words_for_check">Слов для проверки</string>

    <string name="txt_words_for_learn_1">Слов для изучения %s</string>
    <string name="txt_words_for_check_1">Слов для проверки %s</string>

    <string name="row_dict_list_dict_word_count">всего слов — %s</string>
    <string name="dict_has_to_be_supplemented_with_words">Словарь необходимо пополнить словами</string>
    <string name="title_activity_act_dictionary_entry">Содержимое словаря</string>
    <string name="whole_word_list">Весь словарь</string>
    <string name="the_word">Слово</string>
    <string name="transcription">Транскрипция</string>
    <string name="edit_dict">Редактировать словарь</string>
    <string name="word_meaning">Значение</string>
    <string name="usage_sample">Пример использования</string>
    <string name="dont_know">Не знаю</string>
    <string name="i_know">Знаю</string>
    <string name="go_next">Дальше</string>
    <string name="no_more_words">Слова для запоминания закончились. Перейти к проверке слов из словаря?</string>
    <string name="word_learn_percent">%d%%</string>
    <string name="word_is_learned">выучено</string>
    <string name="all_words">все</string>
    <string name="learned">выученные</string>
    <string name="for_check">для проверки</string>
    <string name="staff_for_show">Какие слова показывать:</string>
    <string name="dlg_filter_title">Фильтр словаря</string>
    <string name="alphabet">алфавитный</string>
    <string name="per_percent">проценты</string>
    <string name="last_access">дате изучения/проверки</string>
    <string name="ascending">Возрастание</string>
    <string name="descending">Убывание</string>
    <string name="dlg_order_title">Порядок слов</string>
    <string name="title_activity_act_check_words">Проверяем слова</string>
    <string name="title_activity_act_learn_words">Изучение слов</string>
    <string name="w_name">Название</string>
    <string name="msg_not_enough_words_for_check">Недостаточно выученных слов для проведения проверки</string>
    <string name="txt_no_words_to_learn">Нет слов для изучения</string>
    <string name="txt_no_words_to_check">Нет слов для проверки</string>
    <string name="nothing_to_do">Пока нет слов ни для изучения, ни для проверки.</string>
    <string name="w_dictionary">Словарь</string>
    <string name="noun">сущ.</string>
    <string name="adj">прил.</string>
    <string name="verb">гл.</string>
    <string name="adv">прич.</string>
    <string name="pron">мест.</string>
    <string name="conj">союз</string>
    <string name="interj">межд.</string>
    <string name="txt_press_to_choose_dict">Нажмите здесь, чтобы выбрать словарь...</string>
    <string name="action_export">Экспортировать в файл</string>
    <string name="txt_dict_export_complete">Словарь экспортирован в файл\n%s</string>
    <string name="txt_dict_export_error">Словарь не экспортирован по причине ошибок\n%s</string>
    <string name="txt_dictionary_export">Экспорт словаря</string>
    <string name="txt_directory">Директория</string>
    <string name="txt_file_name">Имя файла</string>
    <string name="txt_load_dictionary">Загрузить словарь</string>
    <string name="txt_restore_dictionary_error">В процессе загрузки словаря встретилась ошибка\n%s</string>
    <string name="txt_learning">Изучение</string>
    <string name="title_activity_act_about">О программе</string>
    <string name="action_about">О программе</string>
    <string name="txt_version_name">Название версии</string>
    <string name="txt_version_number">Номер версии</string>
    <string name="txt_dictionaries">Словари</string>
    <!-- <string name="txt_no_words_for_check">Нет слов для проверки</string> -->
    <string name="error_on_word_update">Ошибка при обновлении слова.</string>
    <string name="error_on_word_insert">Ошибка при сохранении слова</string>
    <string name="error_on_image_saving">Ошибка при сохранении файла изображения</string>
    <string name="title_activity_act_export_dictionary">ActExportDictionary</string>
    <string name="txt_export_dictionary">Экспорт словаря</string>
    <string name="txt_export_stats">экспортировать статистику обучения</string>
    <string name="txt_export_images">экспортировать картинки</string>
    <string name="txt_start_export">Начать экспорт</string>
    <string name="txt_need_wait_for_end">Нужно дождаться завершения экспорта словаря</string>
    <string name="txt_warning">Предупреждение</string>
    <string name="title_activity_act_import_dictionary">ActImportDictionary</string>
    <string name="import_dictionary">Импорт словаря</string>
    <string name="txt_start_import">Начать импорт</string>
    <string name="txt_import_images">импортировать изображения</string>
    <string name="txt_import_stats">импортировать статистику обучения</string>
    <string name="txt_state_unzip">распаковка словаря...</string>
    <string name="txt_state_parsing">разбор словаря...</string>
    <string name="txt_state_load">загрузка словаря...</string>
    <string name="txt_import_complete">Импорт словаря успешно завершен\nимпотировано %d слов</string>
    <string name="txt_import_error">Словарь не загружен из-за ошибок\n%s</string>
    <string name="txt_dlg_select_dict">Выбор словаря</string>
    <string name="txt_last_access_date">последнее обращение %s</string>
    <string name="txt_never">никогда</string>
    <string name="txt_dictionary_images_info" formatted="false">картинок %d, их размер %.2f %s</string>
    <string name="no_one_image">изображений нет</string>
    <string name="txt_skipped_duplications">Не загружены по причине повтора следующие слова:</string>
    <string name="about_one_hour">около часа назад</string>
    <string name="txt_clear_stats">Удалить результаты обучения</string>
    <string name="txt_set_all_learned">Отметить все слова как выученные</string>
    <string name="txt_dlg_add_word_quick">Добавление слова в блокнот</string>
    <string name="txt_fatal_internal_error">Фатальная внутренняя ошибка приложения.\\n%s</string>
    <string name="txt_error_dictionary_deletition">Ошибка при удалении словаря\\n%s</string>
    <string name="action_view_quick_words">Необработанные слова</string>
    <string name="action_add_word_quick">Быстро добавить слово</string>
    <string name="txt_error_open_default_dictionary">Внутренняя ошибка: невозможно открыть список непошитых слов.\\n%s</string>
    <string name="txt_error">Ошибка</string>
    <string name="txt_default_dictionary_title">Слова в блокноте</string>
    <string name="appwidget_text">Quick add word</string>
    <string name="add_widget">Add widget</string>
    <string name="txt_word_already_exists">Такое слово уже есть</string>
    <string name="txt_malformed_word">Непримлемое слово</string>
    <string name="txt_word_must_has_menings">Слово должно иметь значения</string>
    <string name="txt_info">Информация</string>
    <string name="txt_question">Вопрос</string>
    <string name="less_than_one_hour">меньше часа назад</string>
    <string name="txt_put_word_in_dictionary">Сохранить в словаре</string>
    <string name="txt_leave_in_default_dict">Оставить в блокноте</string>
    <string name="txt_dlg_what_to_do_with_word">Куда сохранить слово?</string>
    <string name="txt_notepad_title">Блокнот</string>

</resources>
