<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_new_dict"
        android:title="@string/txt_new_dictionary"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_dict_list"
        android:title="@string/action_dict_list"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_export"
        android:title="Экспорт"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="Импорт"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
