<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.sc.w_drill.ActExportDictionary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="32pt"
                  android:padding="64dp">

    <!-- android:background="@color/LtBeige" -->

    <TextView
        style="@style/ExtraLargeTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_export_dictionary"
        android:id="@+id/dict_name"
        android:typeface="serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/DkBrown"
        android:layout_marginTop="3pt"
        android:layout_marginBottom="3pt"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_export_images"
                    android:id="@+id/chbExportImages"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_column="1">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_export_stats"
                    android:id="@+id/chbExportStats"/>
            </TableRow>

        </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/DkBrown"
        android:layout_marginTop="6pt"
        android:layout_marginBottom="3pt"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_export"
            android:id="@+id/btnStart"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6pt"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12pt"
            android:id="@+id/prgBar"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvResultMessage"
            />


    </LinearLayout>

</RelativeLayout>
