<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.sc.w_drill.ActAbout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32pt"
        android:padding="64dp">

    <TextView
        style="@style/ExtraLargeTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/app_name"
        android:typeface="serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/DkBrown"
        android:layout_marginTop="3pt"
        android:layout_marginBottom="3pt"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12pt"
        android:layout_marginBottom="6pt"
        android:layout_marginLeft="6pt">

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18pt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LargeTitleStyle"
                android:id="@+id/txt1"
                android:layout_weight="0.5"
                android:text="@string/txt_version_name"/>

            <TextView
                android:paddingLeft="6pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LargeTitleStyle"
                android:id="@+id/version_name"
                android:layout_weight="0.5"
                android:text="Druft"
                android:layout_gravity="right"
                android:gravity="right"/>

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18pt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LargeTitleStyle"
                android:id="@+id/txt2"
                android:layout_weight="0.5"
                android:text="@string/txt_version_number"/>

            <TextView
                android:paddingLeft="18pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LargeTitleStyle"
                android:layout_weight="0.5"
                android:id="@+id/version_number"
                android:text="0.1"
                android:gravity="right"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/DkBrown"
        android:layout_marginTop="3pt"
        android:layout_marginBottom="3pt"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:baselineAlignBottom="false"
            android:src="@drawable/scholar_logo_big_red"
            android:layout_marginTop="48pt" />

    </LinearLayout>
</RelativeLayout>
